[package]
name = "nt"
version = "0.1.0"
edition = "2021"
description = "A terminal-based network protocol debugging tool"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
# UI相关
ratatui = { version = "0.29.0" }
crossterm = { version = "0.29.0" }

# 命令行参数
clap = { version = "4.5.3", features = ["derive"] }

# 异步运行时
tokio = { version = "1.45.0", features = ["full"] }

# 数据处理
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.114"
bytes = { version = "1.10.1" }

# 错误处理
anyhow = { version = "1.0.98" }
thiserror = "2.0.12"
async-trait = "0.1.79"

# WebSocket支持
tokio-tungstenite = "0.26.2"
futures-util = "0.3.30"

# HTTP支持
hyper = { version = "1.1.0", features = ["full"] }
http = "1.3.1"
hyper-util = { version = "0.1.11", features = ["full"] }
h2 = "0.4.2"  # HTTP/2 support

# TLS支持 - 使用 ring 作为默认加密后端，避免 aws-lc-sys 在 Windows 上的编译问题
rustls = { version = "0.23.27", default-features = false, features = ["ring", "tls12", "std"] }
rustls-pemfile = "2.1.1"
tokio-rustls = { version = "0.26.2", default-features = false, features = ["ring"] }
rustls-native-certs = "0.8.1"

# 国际化支持
fluent = "0.16.0"
unic-langid = "0.9.4"

# 工具
chrono = "0.4.35"
once_cell = "1.21.3"
dirs-next = "2.0.0"  # For finding config directories

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
